tests/NormalTests/paczka1/fuzzy1/70496976.err
Error in line 3: aICqGfzR A376 22,0
Error in line 38: aICqGfzRvA278v69,6
Error in line 37: aICqGfzR S243 91,8
